Added focus-visible polyfill package which adds outline to handles when focused via keyboard

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react": ">=0.14"
   },
   "dependencies": {
+    "focus-visible": "^4.1.1",
     "object.assign": "^4.1.0",
     "prop-types": "^15.6.0"
   },
